# YOLOv5_NCNN

./: .gitignore  README.md  README_CN.md
android_YOLOV5_NCNN/app/: build.gradle
android_YOLOV5_NCNN/app/src/main/cpp/: CMakeLists.txt  DBFace.cpp  DBFace.h  ENet.cpp  ENet.h  FaceLandmark.cpp  FaceLandmark.h  LightOpenPose.cpp  LightOpenPose.h  MbnFCN.cpp  MbnFCN.h  MobileNetV3Seg.cpp  MobileNetV3Seg.h  NanoDet.cpp  NanoDet.h  SimplePose.cpp  SimplePose.h  Yolact.cpp  Yolact.h  YoloV4.cpp  YoloV4.h  YoloV5.cpp  YoloV5.h  YoloV5CustomLayer.cpp  YoloV5CustomLayer.h  jni_interface.cpp
android_YOLOV5_NCNN/app/src/main/cpp/ncnnvulkan/arm64-v8a/lib/cmake/: glslangTargets.cmake
android_YOLOV5_NCNN/app/src/main/cpp/ncnnvulkan/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
android_YOLOV5_NCNN/app/src/main/cpp/ncnnvulkan/armeabi-v7a/include/ncnn/: ncnn_export.h  platform.h
android_YOLOV5_NCNN/app/src/main/cpp/ncnnvulkan/armeabi-v7a/lib/cmake/ncnn/: ncnn-release.cmake
android_YOLOV5_NCNN/app/src/main/cpp/ncnnvulkan/include/ncnn/: layer_shader_type_enum.h  platform.h
android_YOLOV5_NCNN/app/src/main/cpp/ncnnvulkan/x86/include/ncnn/: layer_type_enum.h
android_YOLOV5_NCNN/app/src/main/cpp/ncnnvulkan/x86/lib/cmake/: OGLCompilerTargets.cmake  SPIRVTargets.cmake
android_YOLOV5_NCNN/app/src/main/cpp/ncnnvulkan/x86_64/include/ncnn/: layer_shader_type_enum.h  platform.h
android_YOLOV5_NCNN/app/src/main/cpp/ncnnvulkan/x86_64/lib/cmake/: OSDependentTargets.cmake
android_YOLOV5_NCNN/app/src/main/cpp/ocr/: NCNNDBNet.h  RRLib.cpp  RRLib.h  ZUtil.cpp  ZUtil.h  clipper.hpp  ocr.cpp  ocr.h  polygon.h
iOS_YOLOv5NCNN/YOLOv5NCNN.xcodeproj/: project.pbxproj
(+109 files in other folders)
